--- a/composer.json
+++ b/composer.json
@@ -5,36 +5,27 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.4",
-        "illuminate/redis": "^6.11",
-        "laravel/airlock": "^0.2.1",
-        "laravel/lumen-framework": "^6.0",
-        "league/flysystem": "^1.0",
-        "league/flysystem-aws-s3-v3": "^1.0",
+        "php": "^7.3|^8.0",
+        "illuminate/redis": "^8.34",
+        "laravel/lumen-framework": "^8.0",
+        "league/flysystem-aws-s3-v3": "^2.0",
         "predis/predis": "^1.1"
     },
     "require-dev": {
-        "fzaninotto/faker": "^1.4",
-        "phpunit/phpunit": "^8.0",
-        "mockery/mockery": "^1.0"
+        "fakerphp/faker": "^1.9.1",
+        "mockery/mockery": "^1.3.1",
+        "phpunit/phpunit": "^9.3"
     },
     "autoload": {
-        "classmap": [
-            "database/seeds",
-            "database/factories"
-        ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
         }
     },
     "autoload-dev": {
         "classmap": [
             "tests/"
-        ]
-    },
-    "scripts": {
-        "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ]
     },
     "config": {
@@ -43,5 +34,10 @@
         "optimize-autoloader": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "scripts": {
+        "post-root-package-install": [
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ]
+    }
 }
