--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=8.0",
+        "easyrdf/easyrdf": "^1.1",
         "illuminate/redis": "^9.45",
         "laravel/lumen-framework": "^9.0",
         "league/flysystem-aws-s3-v3": "^3.10",
